# buildit-support-tickets

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_and_test.sh
alembic/: env.py
alembic/versions/: 0001_init.py
app/: config.py  db.py  main.py  models.py  schemas.py
app/api/: tickets.py
app/llm/: client.py  prompts.py
app/services/: dedup.py  enrichment.py  pii.py
tests/: conftest.py  test_create_ticket.py  test_dedup.py  test_enrichment.py  test_get_ticket.py  test_list_tickets.py  test_pii.py  test_schemas.py
