[project]
name = "buildit-tickets"
version = "0.1.0"
description = "BuildIt support ticket triage API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pylint>=3.2.0",
    "codespell>=2.3.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["asyncpg.*", "alembic.*"]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = ["C0103", "R0903", "W0603", "E1102", "R0913", "R0917"]
min-similarity-lines = 6

[tool.codespell]
skip = ".git,__pycache__,*.lock,*.parquet,*.csv,*.json,uv.lock,alembic"
ignore-words-list = "nd,ser,crate"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.report]
fail_under = 80
